--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,5 +1,8 @@
 .content{
     margin: 0 auto;
     max-width: 800px;
+    font-size: 1.3em;
+    max-width: 1000px;
 }
+
 
